--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,19 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "axios": "^1.6.7",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.3",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.0.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.4",
