--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.2",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
@@ -31,6 +34,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-plugin-history": "^1.0.2",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
