--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,18 @@
-# frontend/Dockerfile
-FROM node:22-alpine as build
+# frontend/Dockerfile (for Vite)
+FROM node:22-alpine AS build
 WORKDIR /app
 
 COPY package*.json ./
-# Use legacy peer deps to bypass React 18 conflicts
 RUN npm ci --legacy-peer-deps
 
 COPY . .
 RUN npm run build
 
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+# use our nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+# serve the Vite build
+COPY --from=build /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
