--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
-    "prisma": "^6.13.0"
+    "prisma": "^6.13.0",
+    "resend": "^6.4.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
